feat(loader): 用于测试boot的简易loader

--- a/arch/i386/Makefile
+++ b/arch/i386/Makefile
@@ -1,5 +1,15 @@
 
 ASMBFLAGS += -I include/
 
-$(BUILDDIR)/boot.bin : boot/boot.asm
+OBJS	= 	$(BUILDDIR)/boot.bin \
+			$(BUILDDIR)/loader.bin
+
+.PHONY: all
+
+all: $(OBJS)
+
+$(BUILDDIR)/boot.bin : boot/boot.asm include/fat12header.inc
+	$(ASM) $(ASMBFLAGS) -o $@ $<
+
+$(BUILDDIR)/loader.bin : loader/loader.asm
 	$(ASM) $(ASMBFLAGS) -o $@ $<
