feat: 用于测试loader的简易kernel

--- a/arch/i386/Makefile
+++ b/arch/i386/Makefile
@@ -2,8 +2,8 @@
 ASMBFLAGS += -I include/
 
 OBJS	= 	$(BUILDDIR)/boot.bin \
-			$(BUILDDIR)/loader.bin
-
+			$(BUILDDIR)/loader.bin \
+			$(BUILDDIR)/kernel.bin
 .PHONY: all
 
 all: $(OBJS)
@@ -12,4 +12,7 @@ $(BUILDDIR)/boot.bin : boot/boot.asm include/fat12header.inc
 	$(ASM) $(ASMBFLAGS) -o $@ $<
 
 $(BUILDDIR)/loader.bin : loader/loader.asm
+	$(ASM) $(ASMBFLAGS) -o $@ $<
+
+$(BUILDDIR)/kernel.bin : kernel/start.asm
 	$(ASM) $(ASMBFLAGS) -o $@ $<
