feat(kernel): 根据elf文件信息调整内核位置，跳入内核

--- a/arch/i386/Makefile
+++ b/arch/i386/Makefile
@@ -3,7 +3,7 @@ ASMBFLAGS += -I include/
 
 OBJS	= 	$(BUILDDIR)/boot.bin \
 			$(BUILDDIR)/loader.bin \
-			$(BUILDDIR)/kernel.bin
+			$(BUILDDIR)/start.o
 .PHONY: all
 
 all: $(OBJS)
@@ -14,5 +14,5 @@ $(BUILDDIR)/boot.bin : boot/boot.asm include/fat12header.inc
 $(BUILDDIR)/loader.bin : loader/loader.asm
 	$(ASM) $(ASMBFLAGS) -o $@ $<
 
-$(BUILDDIR)/kernel.bin : kernel/start.asm
-	$(ASM) $(ASMBFLAGS) -o $@ $<
+$(BUILDDIR)/start.o : kernel/start.asm
+	$(ASM) $(ASMKFLAGS) -o $@ $<
