chore(kernel): 体系相关部分构建方式的变动
为了使根目录下主Makefile的构建规则与体系无关，将体系相关的代码输出的
.o文件构建成静态库供主Makefile规则使用

--- a/arch/i386/Makefile
+++ b/arch/i386/Makefile
@@ -1,12 +1,31 @@
+# 编译boot、loader和内核系统相关部分所用的规则
+# boot和loader的编译输出.bin文件，输出目录为$(ROOTDIR)/build/，并
+# 且该两项的头文件只在$(ROOTDIR)/arch/i386/include中，不依赖$(RO
+# OTDIR)/include/中的头文件
+#
+# 其余文件会先编译成.o文件输出到$(ROOTDIR)/arch/i386/build,该目录
+# 即下面的$(SUBBUILD)，最后将$(SUBBUILD)中的.o文件编译成静态库arch
+# .o输出到$(ROOTDIR)/build供主Makefile使用
 
 ASMBFLAGS += -I include/
+ASMKFLAGS +=
 
-OBJS	= 	$(BUILDDIR)/boot.bin \
-			$(BUILDDIR)/loader.bin \
-			$(BUILDDIR)/start.o
-.PHONY: all
+CFLAGS 	  += -I $(ROOTDIR)/include
 
-all: $(OBJS)
+SUBBUILD   = build
+
+BOOTOBJS	= 	$(BUILDDIR)/boot.bin \
+				$(BUILDDIR)/loader.bin
+
+OBJS		= $(SUBBUILD)/start.o	\
+			  $(SUBBUILD)/liba.o \
+			  $(SUBBUILD)/asm_start.o
+
+TARGET		= $(BUILDDIR)/arch.a
+
+.PHONY: all clear
+
+all: $(BOOTOBJS) $(OBJS) $(TARGET)
 
 $(BUILDDIR)/boot.bin : boot/boot.asm include/fat12header.inc
 	$(ASM) $(ASMBFLAGS) -o $@ $<
@@ -14,5 +33,17 @@ $(BUILDDIR)/boot.bin : boot/boot.asm include/fat12header.inc
 $(BUILDDIR)/loader.bin : loader/loader.asm
 	$(ASM) $(ASMBFLAGS) -o $@ $<
 
-$(BUILDDIR)/start.o : kernel/start.asm
+$(SUBBUILD)/start.o : kernel/start.asm
 	$(ASM) $(ASMKFLAGS) -o $@ $<
+
+$(SUBBUILD)/liba.o : lib/liba.asm
+	$(ASM) $(ASMKFLAGS) -o $@ $<
+
+$(SUBBUILD)/asm_start.o : kernel/asm_start.c
+	$(CC) $(CFLAGS) -o $@ $<
+
+$(TARGET): $(OBJS)
+	$(AR) $(ARFLAGS) $@ $^
+
+clear:
+	rm -f build/*
