--- a/arch/i386/Makefile
+++ b/arch/i386/Makefile
@@ -15,7 +15,7 @@ subarch := arch/$(ARCH)
 
 # 每当有新文件的加入，都要都需要将其相对于该Makefile的路径加入到该变量，该变量会在顶层
 # Makefile中被引用
-src-arch += kernel/start.c kernel/start.asm	lib/liba.asm
+src-arch += kernel/start.c kernel/start.asm	lib/bug.c
 
 src-arch := $(addprefix $(subarch)/, $(src-arch))
 
