fead(mm): 简易的动态内存分配

--- a/mm/Makefile
+++ b/mm/Makefile
@@ -3,7 +3,7 @@ submm := mm
 
 # 每当有新文件的加入，都要都需要将其相对于该Makefile的路径加入到该变量，该变量会在顶层
 # Makefile中被引用
-src-mm += mm_init.c
+src-mm += mm_init.c malloc.c
 
 src-mm := $(addprefix $(submm)/, $(src-mm))
 
