feat: 第一个简易的进程
- 重命名了一部分文件名
- 将部分在头文件中实现的函数改为静态函数，避免重复定义
- 修改了顶层Makefile规则，解决静态库互相依赖的问题
- 定义了进程相关的一些数据结构，添加了部分全局变量

--- a/arch/i386/Makefile
+++ b/arch/i386/Makefile
@@ -15,8 +15,8 @@ subarch := arch/$(ARCH)
 
 # 每当有新文件的加入，都要都需要将其相对于该Makefile的路径加入到该变量，该变量会在顶层
 # Makefile中被引用
-src-arch += kernel/start.c kernel/start.asm	kernel/i8259.c kernel/int.c \
-		kernel/global.c lib/bug.c
+src-arch += kernel/start.c kernel/kernel.asm kernel/i8259.c kernel/protect.c \
+		kernel/global.c kernel/process.c lib/bug.c
 
 src-arch := $(addprefix $(subarch)/, $(src-arch))
 
