--- a/arch/i386/Makefile
+++ b/arch/i386/Makefile
@@ -1,39 +1,15 @@
-# 该Makefile被顶层Makefile包含，用于编译arch目录下源文件。以下规则中所有的源文件的路径都是
-# 根据项目根目录而言的，这样简化了顶层Makefile的规则，方便顶层Makefile构建。
-# 每当arch子目录中有新的源文件加入，都需要将其相对于该Makefile的路径添加到src-arch中，顶层
-# Makefile将会使用此变量。
-# boot和loader的构建比较特殊，不使用通用规则，而是单独进行编译到target目录，若boot和loader
-# 不改变无需改变其规则
-# arch目录中平台相关的代码将会编译成静态库的形式供顶层Makefile进行链接，arch目录中的源文件最
-# 终会编译成arch.a静态库，编译成静态库的规则在该Makefile文件最后给出
-
-
-ASMBFLAGS += -I arch/i386/include/
 
 # 当前Makefile相对于项目根目录的路径，子Makefile共用，注意被覆盖
 reldir := arch/$(ARCH)
 # 每当有新的目录加入时，需要修改该变量，子目录共用此变量，注意可能被覆盖
+# 这里没有加入boot目录的原因是boot目录有自己的Makefile，需要单独编译
 subdir := lib kernel
 subdir := $(addprefix $(reldir)/, $(subdir))
 
 src-arch += $(foreach dir, $(subdir), $(wildcard $(dir)/*.*))
 
-
-# boot.bin和loader.bin比较简单，不使用通用规则，单独编译到target文件夹。boot变量会在顶层
-# Makefile中被引用
-boot = $(target)/boot.bin $(target)/loader.bin
-
-$(target)/boot.bin: $(reldir)/boot/boot.asm $(reldir)/include/fat12header.inc
-	$(ASM) $(ASMBFLAGS) -o $@ $<
-
-$(target)/loader.bin: $(reldir)/boot/loader.asm \
-						$(reldir)/include/fat12header.inc
-	$(ASM) $(ASMBFLAGS) -o $@ $<
-
-
-# 将arch目录下处boot和loader的所有文件编译成arch.a静态库到$(build)目录中
 obj-arch := $(patsubst %.c, %.o, $(src-arch))
-obj-arch := $(patsubst %.asm, %.oa, $(obj-arch))
+obj-arch := $(patsubst %.S, %.o, $(obj-arch))
 obj-arch := $(addprefix $(build)/, $(obj-arch))
 
 $(build)/arch.a: $(obj-arch)
