feat: 检测VBE模式号并设置显示模式

--- a/arch/i386/boot/Makefile
+++ b/arch/i386/boot/Makefile
@@ -9,5 +9,5 @@ all: $(target-dir)/boot.bin $(target-dir)/loader.bin
 $(target-dir)/boot.bin: boot.asm fat12header.inc
 	$(ASM) $(ASMFLAGS) -o $@ $<
 
-$(target-dir)/loader.bin: loader.asm fat12header.inc
+$(target-dir)/loader.bin: loader.asm fat12header.inc video.asm
 	$(ASM) $(ASMFLAGS) -o $@ $<
