refactor: 将分页的初始化移到内核head中，更改了一些代码格式方面的配置

--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,10 @@ trim_trailing_whitespace = true
 indent_style = tab
 tab_width = 8
 
+[*.S]
+indent_style = tab
+tab_width = 8
+
 [*.inc]
 indent_style = tab
 tab_width = 8
