feat(boot): 创建MBR分区引导代码和硬盘分区表

--- a/arch/i386/boot/Makefile
+++ b/arch/i386/boot/Makefile
@@ -4,10 +4,14 @@ target-dir = ../../../target
 ASM := nasm
 ASMFLAGS :=
 
-all: $(target-dir)/boot.bin $(target-dir)/loader.bin
+all: $(target-dir)/boot.bin $(target-dir)/loader.bin \
+	$(target-dir)/mbr.bin
 
 $(target-dir)/boot.bin: boot.asm fat12header.inc
 	$(ASM) $(ASMFLAGS) -o $@ $<
 
 $(target-dir)/loader.bin: loader.asm fat12header.inc video.asm
+	$(ASM) $(ASMFLAGS) -o $@ $<
+
+$(target-dir)/mbr.bin: mbr.asm
 	$(ASM) $(ASMFLAGS) -o $@ $<
